--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>CashCrab</title>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="./css/materialize.css">
+<!-- custom -->
+<link rel="stylesheet" type="text/css" href="./css/loading.css">
+<!------------>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+  <div class="overlay">
+    <div class="spinner center">
+      <div class="spinner-blade"></div>
+      <div class="spinner-blade"></div>
+      <div class="spinner-blade"></div>
+      <div class="spinner-blade"></div>
+      <div class="spinner-blade"></div>
+      <div class="spinner-blade"></div>
+      <div class="spinner-blade"></div>
+      <div class="spinner-blade"></div>
+      <div class="spinner-blade"></div>
+      <div class="spinner-blade"></div>
+      <div class="spinner-blade"></div>
+      <div class="spinner-blade"></div>
+    </div>
+  </div>
+</div>
+<script src="./js/materialize.js" type="text/javascript"></script>
+<script src="./js/vue.js" type="text/javascript"></script>
+<!-- custom -->
+<script src="./js/loading.js" type="text/javascript"></script>
+<!------------>
 </body>
 </html>
